--- a/views/app.erb
+++ b/views/app.erb
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="/js/api.js"></script>
+    <script src="/js/api.js" defer></script>
     <link rel="stylesheet" href="/css/company.css">
     <title>Document</title>
 
     <template class='employee-card'>
-        <div class='employee card' data-id=''">
+        <div class='employee card' data-id=''>
             <h1 class='name'></h1>
             <p class='email'></p>
             <p class='phone'></p>
@@ -21,13 +21,7 @@
 </head>
 <body>
     <main>
-
+        <p class="hej">hej</p>
     </main>
 </body>
-
-<script>
-    window.onload = function() {
-        index()
-    }
-</script>
 </html>
