--- a/views/app.erb
+++ b/views/app.erb
@@ -6,28 +6,18 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="/js/api.js"></script>
     <link rel="stylesheet" href="/css/company.css">
-    <title>Document</title>
-
-    <template class='employee-card'>
-        <div class='employee card' data-id=''">
-            <h1 class='name'></h1>
-            <p class='email'></p>
-            <p class='phone'></p>
-            <p class='department_id'></p>
-            <img src=''>
-        </div>
-    </template>
+    <title>Si, claro!</title>
 
 </head>
 <body>
-    <main>
 
-    </main>
+
+
 </body>
-
+<!--
 <script>
     window.onload = function() {
         index()
     }
-</script>
+</script> -->
 </html>
