--- a/views/app.erb
+++ b/views/app.erb
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="/js/card-board.js" defer></script>
-    <script src="/js/employee-card.js" defer></script>
-    <script src="/js/api.js" defer></script>
+    
+    <script type="module" src="/js/api.js" defer></script>
+    <script type="module" src="/js/card-board.js" defer></script>
+    <script type="module" src="/js/employee-card.js" defer></script>
+    
+
     <link rel="stylesheet" href="/css/company.css">
     <title>Si, claro!</title>
 
