--- a/views/app.erb
+++ b/views/app.erb
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script type="module" src="/js/card-board.js" defer></script>
     <script src="/js/employee-card.js" defer></script>
+    <script src="/js/add-employee.js" defer> </script>
     <link rel="stylesheet" href="/css/company.css">
     <title>Si, claro!</title>
 
